# solana-stablecoin-standard

./: Anchor.toml  package-lock.json
programs/solana-stablecoin/: Cargo.toml
programs/solana-stablecoin/src/: lib.rs
programs/solana-stablecoin/src/instructions/: blacklist.rs  burn.rs  freeze.rs  initialize.rs  mint.rs  mod.rs  pause.rs  roles.rs  seize.rs  transfer_hook.rs
programs/solana-stablecoin/src/state/: config.rs
programs/stablecoin/: Cargo.toml
programs/stablecoin/src/: error.rs  lib.rs
programs/stablecoin/src/instructions/: blacklist.rs  burn.rs  freeze.rs  initialize.rs  mint.rs  mod.rs  pause.rs  roles.rs  seize.rs
programs/stablecoin/src/state/: config.rs
programs/transfer-hook/: Cargo.toml
programs/transfer-hook/src/: lib.rs
tests/: solana-stablecoin-standard.ts
