[package]
name = "solana-stablecoin-standard"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_stablecoin_standard"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = "0.32.1"
anchor-spl = { version = "0.32.1", features = ["token_2022", "metadata"] }
spl-token-2022 = "7.0.0"
spl-transfer-hook-interface = "0.9.0"
spl-tlv-account-resolution = "0.9.0"
spl-type-length-value = "0.6.0"
solana-program = "=2.1.0"


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
