[package]
name = "transfer-hook"
version = "0.1.0"
description = "Token-2022 Transfer Hook for SSS compliance"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "transfer_hook"

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.32.1", features = ["token_2022"] }
spl-transfer-hook-interface = "0.9.0"
spl-tlv-account-resolution = "0.9.0"
# We need the stablecoin's state types
stablecoin = { path = "../stablecoin", features = ["cpi"] }
